# random_company_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  README.md  build.ps1  main.cpp  remove_build.ps1
data/: healthcare_companies.csv  largest_us_companies_by_market_cap.csv  source.txt
images/: logo.kra  logo.kra~
original_data/: largest_companies_by_market_cap.csv  source.txt
